@@ -328,7 +328,7 @@ my $builder = $class->new(
         'XML::LibXML'                            => 1.67,
         'XML::LibXSLT'                           => 1.67,
         'XML::Simple'                            => 0,
-        'XML::TreeBuilder'                       => 4.0,
+        'XML::TreeBuilder'                       => 4.2,
         'Text::CSV_XS'                           => 0,
     },
     requires => {
@@ -375,7 +375,7 @@ my $builder = $class->new(
         'XML::LibXML'                            => 1.67,
         'XML::LibXSLT'                           => 1.67,
         'XML::Simple'                            => 0,
-        'XML::TreeBuilder'                       => 4.0,
+        'XML::TreeBuilder'                       => 4.2,
         'Text::CSV_XS'                           => 0,
     },
     add_to_cleanup => [
