@@ -16,7 +16,7 @@
 
 Name:           publican
 Version:        3.1.5
-Release:        0%{?dist}.t41
+Release:        0%{?dist}.t42
 Summary:        Common files and scripts for publishing with DocBook XML
 # For a breakdown of the licensing, refer to LICENSE
 License:        (GPLv2+ or Artistic) and CC0
@@ -83,7 +83,7 @@ BuildRequires:  perl(Time::localtime)
 BuildRequires:  perl(XML::LibXML) => 1.67
 BuildRequires:  perl(XML::LibXSLT) => 1.67
 BuildRequires:  perl(XML::Simple)
-BuildRequires:  perl(XML::TreeBuilder) => 4.0
+BuildRequires:  perl(XML::TreeBuilder) => 4.2
 BuildRequires:  wkhtmltopdf >= 0.10.0_rc2-5
 BuildRequires:  docbook-style-xsl >= 1.77.1
 BuildRequires:  desktop-file-utils
