@@ -37,7 +37,8 @@
   - Fix empty pot files not being deleted. BZ #961413
   - Fix long title layout on cover page in PDF. BZ #956934
   - Add Mac OS X Lion installation instructions. BZ# 979229
-  - Add file handle limit workaround BZ #952476
+  - Add file handle limit workaround to FAQ BZ #952476
+  - Support CDATA tags. BZ #958343
 
 3.1.5 Mon Mar 18 2013
   - Fix translated PDF encode issue when build from packaged books. BZ #922618
